# ride-hailing-microservice-architecture

./: .gitignore  LICENSE  README.md  docker-compose.yml  ride-hailing-microservice-architecture.sln
frontend/: Dockerfile
gateway/: Dockerfile  kong.yml
monitoring/: otel-collector-config.yaml  prometheus.yml
services/notification-service/: package.json  pnpm-lock.yaml
services/notification-service/src/: app.module.ts  main.ts
services/payment-service/: Dockerfile  package.json  pnpm-lock.yaml
services/payment-service/src/: app.module.ts  main.ts
services/ride-service/: Dockerfile  package.json  pnpm-lock.yaml
services/ride-service/src/: app.module.ts  main.ts
services/user-service/: Dockerfile  pyproject.toml
services/user-service/user_service/: config.py  db.py  exceptions.py  kafka.py  main.py  tracing.py
services/user-service/user_service/events/: base_event.py  event_type.py
services/user-service/user_service/models/: user.py
services/user-service/user_service/routes/: users.py
services/user-service/user_service/utils/: decorator.py  responses.py
services/vehicle-service/: Dockerfile  Program.cs  appsettings.json  vehicle-service.csproj
services/vehicle-service/Db/: VehicleDbContext.cs
services/vehicle-service/Endpoints/: VehicleActivityEndpoints.cs  VehicleEndpoints.cs
services/vehicle-service/Events/: BaseEvent.cs  EventType.cs
services/vehicle-service/Extensions/: EnumExtensions.cs
services/vehicle-service/Kafka/: KafkaProducer.cs
services/vehicle-service/Middleware/: ErrorHandlingMiddleware.cs
(+72 files in other folders)
