[project]
name = "user-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Blessed Josiah",email = "blessed_josiah@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "opentelemetry-api (>=1.38.0,<2.0.0)",
    "opentelemetry-sdk (>=1.38.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.38.0,<2.0.0)",
    "opentelemetry-instrumentation-asgi (>=0.59b0,<0.60)",
    "opentelemetry-instrumentation-fastapi (>=0.59b0,<0.60)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]


[tool.poetry.scripts]
serve = "user_service.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
